add summary endpoint
