# docs/swagger.yaml
@@ -125,6 +125,19 @@ definitions:
       member_id:
         type: integer
     type: object
+  internal_transport_http_meet.Balance:
+    properties:
+      balance:
+        type: integer
+      member_id:
+        type: integer
+      name:
+        type: string
+      total_paid:
+        type: integer
+      total_share:
+        type: integer
+    type: object
   internal_transport_http_meet.CreateEventRq:
     properties:
       date:
@@ -161,6 +174,17 @@ definitions:
       updated_at:
         type: string
     type: object
+  internal_transport_http_meet.EventSummary:
+    properties:
+      balances:
+        items:
+          $ref: '#/definitions/internal_transport_http_meet.Balance'
+        type: array
+      settlements:
+        items:
+          $ref: '#/definitions/internal_transport_http_meet.Settlement'
+        type: array
+    type: object
   internal_transport_http_meet.Member:
     properties:
       ID:
@@ -169,6 +193,15 @@ definitions:
         type: integer
       username:
         type: string
+    type: object
+  internal_transport_http_meet.Settlement:
+    properties:
+      amount:
+        type: integer
+      from_member_id:
+        type: integer
+      to_member_id:
+        type: integer
     type: object
   internal_transport_http_user.CreatePaymentMethodReq:
     properties:
@@ -446,7 +479,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/internal_transport_http_meet.Event'
+            $ref: '#/definitions/internal_transport_http_meet.EventSummary'
         "401":
           description: Unauthorized
           schema:
@@ -462,6 +495,40 @@ paths:
       security:
       - SessionAuth: []
       summary: Получение инфы по ивенту
+      tags:
+      - meet
+  /meets/{id}/summary:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID мита
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/internal_transport_http_meet.EventSummary'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/billsplitter-monolith_internal_utils_http.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/billsplitter-monolith_internal_utils_http.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/billsplitter-monolith_internal_utils_http.ErrorResponse'
+      security:
+      - SessionAuth: []
+      summary: Получение сбивки по ивенту
       tags:
       - meet
   /payment_methods:
