# internal/transport/http/meet/routes.go
@@ -2,6 +2,7 @@ package meet
 
 import (
 	"billsplitter-monolith/internal/transport/http/middleware"
+
 	"github.com/go-chi/chi/v5"
 )
 
@@ -13,5 +14,7 @@ func InitRoutes(r chi.Router, ctrl Controller, mw middleware.Manager) {
 		r.With(mw.Auth()).Get("/", ctrl.FetchUserMeets)
 
 		r.With(mw.Auth()).Get("/{id}", ctrl.GetMeetDetailsByID)
+
+		r.With(mw.Auth()).Get("/{id}/summary", ctrl.GetSummary)
 	})
 }
